--- a/angular.json
+++ b/angular.json
@@ -24,8 +24,12 @@
             ],
             "styles": [
               "src/styles.scss",
-              "node_modules/bootstrap/scss/bootstrap.scss"
             ],
+            "stylePreprocessorOptions": {
+              "includePaths": [
+                "node_modules/bootstrap/scss"
+              ]
+            },
             "scripts": [],
             "es5BrowserSupport": true
           },
