--- a/angular.json
+++ b/angular.json
@@ -30,7 +30,10 @@
                 "node_modules/bootstrap/scss"
               ]
             },
-            "scripts": [],
+            "scripts": [
+              "node_modules/jquery/dist/jquery.min.js",
+              "node_modules/bootstrap/dist/js/bootstrap.min.js"
+            ],
             "es5BrowserSupport": true
           },
           "configurations": {
