--- a/angular.json
+++ b/angular.json
@@ -30,10 +30,7 @@
                 "node_modules/bootstrap/scss"
               ]
             },
-            "scripts": [
-              "node_modules/jquery/dist/jquery.min.js",
-              "node_modules/bootstrap/dist/js/bootstrap.min.js"
-            ],
+            "scripts": [],
             "es5BrowserSupport": true
           },
           "configurations": {
